// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with invalid or very weak possibleItems 1`] = `
<div>
  <h2>
    Possible Passwords
  </h2>
  1
   (
  Very Weak
  , 
  0.00
   bits of entropy)
</div>
`;

exports[`renders with strong possiblePasswords 1`] = `
<div>
  <h2>
    Possible Passwords
  </h2>
  ~ 
  18,446,744,073,709,600,000
   (
  Strong
  , 
  ~ 
  64.00
   bits of entropy)
</div>
`;

exports[`renders with very strong possiblePasswords 1`] = `
<div>
  <h2>
    Possible Passwords
  </h2>
  ~ 
  340,282,366,920,938,000,000,000,000,000,000,000,000
   (
  Very Strong
  , 
  ~ 
  128.00
   bits of entropy)
</div>
`;

exports[`renders with weak possiblePasswords 1`] = `
<div>
  <h2>
    Possible Passwords
  </h2>
  4,294,967,296
   (
  Weak
  , 
  32.00
   bits of entropy)
</div>
`;
